coach details added in appointment service